--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot=12.3.0
-bs4=4.8.4
+python-telegram-bot=12.7
+bs4=4.9.1
 requests=2.22.0
-
+PySocks=1.7.1
+python-dotenv=0.13.0    
+urllib3=1.25.9
