--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot=12.7
-bs4=4.9.1
-requests=2.22.0
-PySocks=1.7.1
-python-dotenv=0.13.0    
-urllib3=1.25.9
+python-telegram-bot==12.7
+bs4==0.0.1
+requests==2.22.0
+PySocks==1.7.1
+python-dotenv==0.13.0    
+urllib3==1.25.9
